--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+  .background {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -10;
+    object-fit: cover;
+  }
+
+  .backgroundOverlay {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    background-color: black;
+    z-index: -1;
+    opacity: 0.3;
+  }
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
