Fix transform translate to be more centered

--- a/src/components/banner/style.css
+++ b/src/components/banner/style.css
@@ -2,5 +2,14 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -70%);
+}
+
+@media screen
+and (device-width: 360px)
+and (device-height: 640px)
+and (-webkit-device-pixel-ratio: 3) {
+  .hero-body .banner-position {
+    font-size: 10px;
+  }
 }
